--- a/templates/manage_product.html
+++ b/templates/manage_product.html
@@ -102,7 +102,8 @@
         ],
         'beans': [
             { value: 'coffee-beans', label: 'Coffee Beans' },
-            { value: 'ground-coffee', label: 'Ground Coffee/Capsules' }
+            { value: 'ground-coffee', label: 'Ground Coffee/Capsules' },
+            { value: 'capsules', label: 'Capsules' } 
         ],
         'accessories': [
             { value: 'brewing-equipment', label: 'Brewing Equipment' },
